<resources>
    <string name="app_name">Freebies</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_simple_login">Facebook Login</string>
    <string name="app_id">537154259756067</string>
    <string name="colorBG">#00FFFF</string>
    <color name="aqua">#00FFFF</color>


    <string name="hello_world">Hello world!</string>
    <string name="about">About Page!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event_submission">EventSubmission</string>

    // EventSubmission Activity Strings
    <string name="event_title">Event Title</string>
    <string name="event_type">Event Type:</string>
    <string name="event_type_food">Food</string>
    <string name="event_type_merch">Merchandise</string>
    <string name="event_location">Event Location</string>
    <string name="event_description">Event Description</string>
    <string name="event_time">Event Time</string>
    <string name="event_date">Event Date</string>
    <string name="event_submit">Submit</string>
        // hints
    <string name="event_location_hint">Where\'s it at?</string>
    <string name="event_time_hint">What time?</string>
    <string name="event_title_hint">What is it?</string>

</resources>
